iptables/rules.v4
# Generated by iptables-save v1.8.10 (nf_tables) on Fri Jun 19 12:41:58 2026
*filter
:INPUT ACCEPT [55249:8930508]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [41443:2186720]
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8082 -j ACCEPT
-A INPUT -s 185.68.21.139/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -i lo -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 185.68.21.139/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -i lo -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 151.252.94.221/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 185.54.50.170/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j DROP
-A INPUT -s 185.54.50.0/24 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 151.252.94.221/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 151.252.94.221/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -j LOG --log-prefix "IPTABLES_DROP: "
-A INPUT -p tcp -m tcp --dport 22 -m state --state NEW -m recent --set --name SSH --mask 255.255.255.255 --rsource
-A INPUT -p tcp -m tcp --dport 22 -m state --state NEW -m recent --update --seconds 60 --hitcount 6 --name SSH --mask 255.255.255.255 --rsource -j DROP
COMMIT
# Completed on Fri Jun 19 12:41:58 2026
# Generated by iptables-save v1.8.10 (nf_tables) on Fri Jun 19 12:41:58 2026
*nat
:PREROUTING ACCEPT [39055:2123592]
:INPUT ACCEPT [36998:2001801]
:OUTPUT ACCEPT [58:4282]
:POSTROUTING ACCEPT [58:4282]
-A PREROUTING -p tcp -m tcp --dport 8080 -j REDIRECT --to-ports 80
COMMIT
# Completed on Fri Jun 19 12:41:58 2026
